Bar charts mostly working perfectly, noticing a bug with the symbol lines being a bit too wide

--- a/zatanna.css
+++ b/zatanna.css
@@ -47,3 +47,8 @@
 .barChart .x.axis path {
     display: none;
 }
+
+.barChart .symbolLabel {
+  font-size: 9px;
+  opacity: 0.6;
+}
